@@ -3,10 +3,13 @@
 try:
     from eea.cache import cache as ramcache
     from lovely.memcached.event import InvalidateCacheEvent
+    ramcache, InvalidateCacheEvent
 except ImportError:
     # Fail quiet if required cache packages are not installed in order to use
     # this package without caching
-    from nocache import ramcache
-    from nocache import InvalidateCacheEvent
+    from eea.geotags.cache.nocache import ramcache
+    from eea.geotags.cache.nocache import InvalidateCacheEvent
+    ramcache, InvalidateCacheEvent
 
-from cache import cacheGeoJsonKey
+from eea.geotags.cache.cache import cacheGeoJsonKey
+cacheGeoJsonKey
