@@ -2,6 +2,7 @@
 """
 try:
     from zope.annotation.interfaces import IAnnotations
+    IAnnotations
 except ImportError:
     #BBB Plone 2.5
     from zope.app.annotation.interfaces import IAnnotations
@@ -11,7 +12,7 @@ from persistent.dict import PersistentDict
 from zope.interface import implements
 from zope.component import queryAdapter
 from eea.geotags.config import ANNO_TAGS
-from interfaces import IGeoTags
+from eea.geotags.storage.interfaces import IGeoTags
 logger = logging.getLogger('eea.geotags.storage')
 
 class GeoTags(object):
@@ -22,22 +23,22 @@ class GeoTags(object):
     def __init__(self, context):
         self.context = context
 
-    def tags():
+    #def tags():
 
-        def get(self):
-            anno = queryAdapter(self.context, IAnnotations)
-            if not anno:
-                logger.exception('%s is not Annotable', self.context.absolute_url())
-                return {}
-            return dict(anno.get(ANNO_TAGS, {}))
+    def gett(self):
+        anno = queryAdapter(self.context, IAnnotations)
+        if not anno:
+            logger.exception('%s is not Annotable', self.context.absolute_url())
+            return {}
+        return dict(anno.get(ANNO_TAGS, {}))
 
-        def set(self, value):
-            anno = queryAdapter(self.context, IAnnotations)
-            if not anno:
-                logger.exception('%s is not Annotable', self.context.absolute_url())
-                return
-            anno[ANNO_TAGS] = PersistentDict(value)
+    def sett(self, value):
+        anno = queryAdapter(self.context, IAnnotations)
+        if not anno:
+            logger.exception('%s is not Annotable', self.context.absolute_url())
+            return
+        anno[ANNO_TAGS] = PersistentDict(value)
 
-        return property(get, set)
+    #return property(get, set)
 
-    tags = tags()
+    tags = property(gett, sett)
