@@ -3,7 +3,7 @@
 import unittest
 from zope.testing import doctest
 from Testing.ZopeTestCase import FunctionalDocFileSuite as Suite
-from base import EEAGeotagsFunctionalTestCase
+from eea.geotags.tests.base import EEAGeotagsFunctionalTestCase
 
 OPTIONFLAGS = (doctest.REPORT_ONLY_FIRST_FAILURE |
                doctest.ELLIPSIS |
